# AGPlib

./: .clang-format  .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  lint.sh  plot_charts.py
scripts/: generate_plot.py  plot_charts.py
src/: CMakeLists.txt
src/agp/: CMakeLists.txt
src/agp/include/agp/: discretization_methods.h  initial_placements.h
src/agp/include/agp/algo/: baumgartner_algorithm.h  couto_algorithm.h  fisk_algorithm.h  ghosh_algorithm.h
src/agp/include/agp/arrangement/: partition.h  utils.h  visibility.h
src/agp/include/agp/cplex/: cplex.h
src/agp/include/agp/plot/: agp_plot.h
src/agp/src/agp/: discretization_methods.cpp  initial_placements.cpp
src/agp/src/agp/algo/: baumgartner_algorithm.cpp  couto_algorithm.cpp  fisk_algorithm.cpp  ghosh_algorithm.cpp
src/agp/src/agp/arrangement/: partition.cpp  utils.cpp  visibility.cpp
src/agp/src/agp/cplex/: cplex.cpp
src/agp/src/agp/plot/: agp_plot.cpp
src/client/: CMakeLists.txt  main.cpp
src/experiments/: CMakeLists.txt  main.cpp
src/test/: 001-arr_partition_test.cpp  001-arr_visibility_test.cpp  CMakeLists.txt
tests/: 001-arr_partition_test.cpp  001-arr_utils_test.cpp  001-arr_visibility_test.cpp  CMakeLists.txt
tests/instances/: rand-100-8.pol  rand-20-1.pol  rand-200-66.pol
